# qwen25-finetune

./: .gitignore  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  train.py
configs/distributed/: multi_node_p4d.yaml  single_node.yaml
examples/: complete_training_example.py  custom_architecture_example.py  special_tokens_example.py
scripts/: launch_distributed.py
src/losses/: __init__.py  base.py  custom_losses.py  factory.py
src/training/: __init__.py  trainer.py
src/utils/: distributed.py  logging.py
