[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen25-finetune"
version = "0.1.0"
description = "A modular, extensible framework for training Qwen2.5 models with custom architectures and loss functions"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Qwen2.5 Training Framework Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.47.0",
    "accelerate>=1.1.0",
    "peft>=0.15.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "deepspeed>=0.16.0",
    "flash-attn>=2.0.0",
    "liger-kernel>=0.5.0",
    "bitsandbytes>=0.41.0",
    "qwen-vl-utils",
    "trl>=0.17.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "PyYAML>=6.0",
    "tqdm>=4.64.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tensorboard>=2.10.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.scripts]
qwen25-train = "train:main"
qwen25-launch = "scripts.launch_distributed:main"

[project.urls]
Homepage = "https://github.com/your-username/qwen25-finetune"
Repository = "https://github.com/your-username/qwen25-finetune"
Documentation = "https://github.com/your-username/qwen25-finetune#readme"
Issues = "https://github.com/your-username/qwen25-finetune/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".env"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"